--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="card" style="width: 18rem;">
         <img src="img/eksklusif.jpeg" class="card-img-top" alt="Gambar">
         <div class="card-body">
-        <h5 class="card-title">Standar Room</h5>
+        <h5 class="card-title">eksklusif Room</h5>
         <p class="card-text">Fasilitas:</p>
         <ul>ranjang</ul>
         <ul>lemari</ul>
